Refatoraçao do código

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     
     <canvas> </canvas>
-
+    <script src="./personagem.js"></script>
+    <script src="./carro.js"></script>
+    <script src="./imagens.js"></script>
     <script src="./main.js"></script>
+
 </body>
 </html>
