Implementada lógica de colisao e mais carros ao cenário.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <script src="./carro.js"></script>
     <script src="./imagens.js"></script>
     <script src="./main.js"></script>
-
+    <script src="./colisao.js"></script>
 </body>
 </html>
