--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./personagem.js"></script>
     <script src="./carro.js"></script>
     <script src="./colisao.js"></script>
+    <script src="./audios.js"></script>
     <script src="./main.js"></script>
     
 </body>
