Organizaçao dos arq.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freeway Game</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     
     <canvas> </canvas>
-    <script src="./imagens.js"></script>
-    <script src="./personagem.js"></script>
-    <script src="./carro.js"></script>
-    <script src="./colisao.js"></script>
-    <script src="./audios.js"></script>
-    <script src="./main.js"></script>
+    <script src="./js/imagens.js"></script>
+    <script src="./js/personagem.js"></script>
+    <script src="./js/carro.js"></script>
+    <script src="./js/colisao.js"></script>
+    <script src="./js/audios.js"></script>
+    <script src="./js/main.js"></script>
     
 </body>
 </html>
